# nicacher

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  sqlx-data.json
migrations/: 20221225123417_cache.sql
src/: app.rs  cache.rs  config.rs  error.rs  fetch.rs  http.rs  jobs.rs  main.rs  nar.rs  nix.rs
src/cache/: db.rs  mod.rs
src/http/: admin.rs  api.rs  mod.rs
