[package]
name = "nicacher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-recursion = "1"

tower = "0.4"
tower-http = { version = "0.3.0", features = ["trace", "fs"] }

axum = "0.6"
reqwest = { version = "0.11", features = ["gzip"] }
url = { version = "2.3", features = ["serde"] }

apalis = { version = "0.3", features = ["sqlite", "cron", "extensions"] }
apalis-core = "0.3"

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "offline"] }

anyhow = "1.0"
thiserror = "1.0"

derive_builder = "0.12"
num_enum = "0.5.7"
chrono = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_with = "2.1"
xz2 = { version = "0.1", features = ["tokio"] }
toml = "0.5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
